# SLS-1.02

./: .emacs  Image  README.md  YMTRANS.TBL  linux
ISO/: SLS-1.02.iso.jigdo  sls102_i386.qcow2.jigdo
dev/: MAKEDEV  YMTRANS.TBL  console  modem  swap  tty21  ttys0
etc/: README  README.client  README.server  YMTRANS.TBL  chpasswd  config  config.c  domain  exports  fdprm  fingerd  fstab  ftpaccess  ftpd  ftpusers  gettydefs  gettytab  group  groupadd  groupdel  groupmod  gshadow  host  host.conf  hostcvt.build  hosts  inetd  inetd.conf  init  inittab  issue  login.defs  logoutd  lpc  lpd  lxnet.faq  magic  mkpasswd  motd  mount  (+61 more)
etc/default/: YMTRANS.TBL  useradd
etc/lilo/: README  YMTRANS.TBL  any_d.b  boot.b  chain.b  config.in  disktab  install  (+3 more)
home/: YMTRANS.TBL
info/: YMTRANS.TBL  uucp.info  uucp.info-1  uucp.info-2  uucp.info-3  uucp.info-4  uucp.info-5
install/: Announce  YMTRANS.TBL  a1.3  a1.5
interviews/: YMTRANS.TBL
lib/: YMTRANS.TBL  cpp  libUIC.so.1  libUIC.so.1.0  libX11.so.3  libX11.so.3.0  libXaw.so.3  libXaw.so.3.0  libXt.so.3  libXt.so.3.0  libc.so.4  libc.so.4.3.3  libemu  libm.so.4  libm.so.4.3.3  libolg.so.2  libolg.so.2.0  libss.so.2.0  libxv3.so.2  libxv3.so.2.0
root/: .bashrc  .kermrc  .mcwd  .profile  YMTRANS.TBL
tmp/: YMTRANS.TBL
usr/: YMTRANS.TBL  emacs
usr/src/TeX/xdvik-0.17l/: AUTHORS  ChangeLog  Makefile.in  Makefile.linux  README  YMTRANS.TBL  a.tex  aclocal.m4  c-auto.h  c-auto.h.in  c-memstr.h  c-minmax.h  c-pathch.h  c-std.h  config.h  config.status  configure  configure.in  dir-p.c  dirio.h  dvi-draw.c  dvi-init.c  file-p.c  gf.c  lib.h  make-suffix.c  mksedscript  paths.h  paths.h.in  pathsrch.c  pk.c  pxl-open.c  pxl-open.h  tpic.c  version.c  xdvi.c  xdvi.h  xdvi.icon  xdvi.man  xdvi_curs.h  (+1 more)
usr/src/clisp-1993-03-19/src/: FILES  FILES.1  YMTRANS.TBL  _README  _clisp.1  _impnotes.txt  alglobal.d  amiga.d  amiga2.d  ari68000.atari.d  ari68000.mit.d  ari68000.mot.d  ari68020.mit.d  ari68020.mot.d  ari80386.d  aridecl.d  arihppa.d  arilev0.d  arilev1.d  arilev1c.d  arilev1e.d  arilev1i.d  arimips.d  arisparc.d  arivax.d  array.d  atari.d  avl.d  backquot.lsp  cc_sparc.il  cfgamiga.lsp  cfgatfd.lsp  cfgathd.lsp  cfgdos.lsp  cfglinux.lsp  cfgsunux.lsp  cfgunix.lsp  cfgvms.lsp  charstrg.d  compelem.d  (+88 more)
usr/src/clisp-1993-03-19/src/glob/: YMTRANS.TBL  tilde.c
usr/src/clisp-1993-03-19/src/readline/: ChangeLog  Makefile.in  YMTRANS.TBL  alloca.c  chardefs.h  config.h.in  configure  configure.in  emacs_keymap.c  funmap.c  funmap.h  history.c  history.h  keymaps.c  keymaps.h  readline.c  readline.h  sysdep.h  vi_keymap.c  vi_mode.c  xmalloc.c
usr/src/clisp-1993-03-19/src/readline/doc/: Makefile  YMTRANS.TBL  hist.dvi  rlman.dvi
usr/src/clisp-1993-03-19/src/readline/examples/: YMTRANS.TBL  fileman.c
usr/src/cpio-2.2/: ChangeLog  INSTALL  Makefile.in  NEWS  YMTRANS.TBL  configure  configure.in  copyin.c  copyout.c  copypass.c  cpio.1  cpio.def  dirname.c  extern.h  getopt.c  getopt1.c  global.c  main.c  makefile.os2  makefile.pc  mt.1  mt.c  strdup.c  system.h  tar.c  util.c  version.c
usr/src/diff-2.1/: ChangeLog  Makefile  Makefile.in  NEWS  YMTRANS.TBL  cmp.c  config.status  configure  configure.in  diff.info  diff.info-1  diff.info-2  diff.info-3  diff.texi  diff3.c  dir.c  io.c  sdiff.c  system.h  texinfo.tex  version.c
usr/src/gdb-4.8/mmalloc/: ChangeLog  Makefile.in  YMTRANS.TBL  attach.c  configure.in  detach.c  mmalloc.texi
usr/src/gdb-4.8/mmalloc/config/: YMTRANS.TBL
usr/src/gdb-4.8/readline/: YMTRANS.TBL  configure.in
usr/src/gdb-4.8/readline/config/: YMTRANS.TBL
usr/src/gdb-4.8/readline/doc/: YMTRANS.TBL
usr/src/m4-1.0.3/: ChangeLog  Makefile.in  NEWS  README  THANKS  TODO  YMTRANS.TBL  aclocal.m4  ansi2knr.c  builtin.c  configure  configure.in  debug.c  eval.c  format.c  input.c  m4.c  m4.h  m4.info  m4.info-1  m4.info-2  m4.texinfo  macro.c  output.c  path.c  symtab.c  texinfo.tex
usr/src/m4-1.0.3/checks/: 01.define  02.arguments  03.arguments  04.arguments  05.arguments  06.pseudo_argu  07.pseudo_argu  08.pseudo_argu  09.pseudo_argu  10.pseudo_argu  11.undefine  12.defn  13.pushdef  14.pushdef  15.indir  16.ifdef  17.ifelse  18.ifelse  19.loops  20.loops  21.dumpdef  22.trace  23.dnl  24.changequote  25.changequote  26.changequote  27.changecom  28.changecom  29.m4wrap  30.include  31.include  32.include  33.divert  34.divert  35.undivert  36.undivert  37.undivert  38.divnum  39.cleardiv  40.cleardiv  (+21 more)
usr/src/m4-1.0.3/examples/: YMTRANS.TBL  divert.m4  foreach.m4  include.m4
usr/src/m4-1.0.3/lib/: Makefile.in  YMTRANS.TBL  regex.c  regex.h
usr/src/oleo-1.2.2/: ANNOUNCE  BUGS  ChangeLog  INSTALL  INSTALL.OLEO  Makefile  Makefile.in  NEWS  README  USING  YMTRANS.TBL  _doprnt.c  busi.c  byte-compile.c  byte-compile.h  cell.h  cells.c  cmd.h  config.status  configure  configure.in  decompile.c  display.c  display.h  errors.h  eval.c  eval.h  font.c  font.h  funcdef.h  getopt.c  global.h  hash.c  hash.h  init.c  init.h  io-abstract.h  io-curses.c  io-curses.h  io-edit.c  (+47 more)
usr/src/screen-3.2b/: ChangeLog  Makefile  Makefile.in  NEWS  README  YMTRANS.TBL  config.h  config.h.in  config.status  configure  configure.in  etcscreenrc  extern.h  extern.h.sav  fileio.c  getloadavg.c  help.c  mark.c  patchlevel.h  screen.1  screen.c  screen.h  socket.c
usr/src/screen-3.2b/terminfo/: YMTRANS.TBL
usr/src/screen-3.2b/terminfo/s/: YMTRANS.TBL
usr/src/textutils-1.4/: Makefile.in  NEWS  README  YMTRANS.TBL  configure  configure.in
usr/src/textutils-1.4/lib/: Makefile.in  YMTRANS.TBL  getopt.c
usr/src/textutils-1.4/man/: Makefile.in  YMTRANS.TBL  cat.1  cksum.1  csplit.1  cut.1  expand.1  fold.1  head.1  join.1  nl.1  od.1  paste.1  sort.1  split.1  sum.1  tac.1  tail.1  tr.1  unexpand.1  uniq.1  wc.1
usr/src/textutils-1.4/src/: Makefile.in  YMTRANS.TBL  pr.c  version.c
usr/src/time-1.4/: ChangeLog  Makefile.in  NEWS  README  YMTRANS.TBL  configure  configure.in  getpagesize.h  rusage.h  texinfo.tex  time.c  time.info  time.texinfo  timeval.h  wait3.c
xtra/: YMTRANS.TBL  mit-1.z  mit-2.z  mit-3.z
(+13483 files in other folders)
