dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT(m4.c)
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_AWK
AC_ISC_POSIX
AC_CONST
FP_PROTOTYPES
AC_STDC_HEADERS
AC_HAVE_HEADERS(string.h)
AC_MEMORY_H
AC_SIZE_T
AC_FUNC_CHECK(tmpfile, AC_DEFINE(HAVE_TMPFILE), tmpfile_missing=1)
if test -n "$tmpfile_missing"; then
AC_FUNC_CHECK(mkstemp, AC_DEFINE(HAVE_MKSTEMP))
fi
AC_HEADER_EGREP(ecvt, stdlib.h, AC_DEFINE(HAVE_EFGCVT, 2), 
  AC_FUNC_CHECK(ecvt, AC_DEFINE(HAVE_EFGCVT)))
AC_REPLACE_FUNCS(vfprintf)
AC_ALLOCA
AC_OUTPUT(Makefile lib/Makefile checks/Makefile)

if test $srcdir != .; then
  echo "creating check files"
  test ! -d checks && mkdir checks
changequote(,)dnl
  cp $srcdir/checks/[0-9][0-9].* $srcdir/checks/incl.m4 $srcdir/checks/foo checks
changequote([,])dnl
fi
