dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/fold.c)
AC_PROG_CC
AC_PROG_CPP
AC_GCC_TRADITIONAL
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_AIX
AC_MINIX
AC_ISC_POSIX
AC_RETSIGTYPE
AC_CONST
AC_STDC_HEADERS
AC_UNISTD_H
AC_HAVE_HEADERS(string.h memory.h fcntl.h)
AC_REPLACE_FUNCS(bcopy memcmp memset stpcpy strtoul)
AC_HAVE_FUNCS(strerror)
AC_VPRINTF
AC_ALLOCA
AC_ST_BLKSIZE
AC_XENIX_DIR
AC_OUTPUT(Makefile lib/Makefile src/Makefile man/Makefile)
