dnl Process this file with autoconf to produce a configure script.
AC_INIT(time.c)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_MINIX
AC_ISC_POSIX
AC_RETSIGTYPE
AC_STDC_HEADERS
AC_USG
AC_UNISTD_H
AC_HEADER_CHECK(sys/time.h, AC_DEFINE(HAVE_SYS_TIME_H))
AC_HEADER_CHECK(sys/resource.h, AC_DEFINE(HAVE_SYS_RESOURCE_H))
AC_COMPILE_CHECK(getpagesize, [#include <sys/param.h>],
[getpagesize();], AC_DEFINE(HAVE_GETPAGESIZE))
AC_HAVE_FUNCS(strerror)
AC_WAIT3
case "$DEFS" in
  *HAVE_WAIT3*) ;;
  *) LIBOBJS="$LIBOBJS wait3.o" ;;
esac

AC_SUBST(LIBOBJS)dnl
AC_VPRINTF
AC_ALLOCA
AC_OUTPUT(Makefile)
