dnl Process this file with autoconf to produce a configure script.
AC_INIT(xdvi.c)

dnl Write output here, instead of putting -D's on the command line.
AC_CONFIG_HEADER(c-auto.h)

AC_PROG_CC
AC_PROG_CPP
AC_GCC_TRADITIONAL
AC_PROG_INSTALL

AC_AIX
AC_DYNIX_SEQ
AC_ISC_POSIX
AC_ISC_WLIBS
AC_MINIX
AC_XENIX_DIR

# Do we have the SIGIO signal (and F_SETOWN and FASYNC)?
echo checking for SIGIO
AC_TEST_PROGRAM(#include <signal.h>
#include <fcntl.h>
main () { int x = SIGIO + F_SETOWN + FASYNC; return 0; }, AC_DEFINE(HAS_SIGIO))

AC_DIR_HEADER
AC_HEADER_CHECK(limits.h, :, AC_DEFINE(LIMITS_H_MISSING))
AC_HEADER_CHECK(float.h, :, AC_DEFINE(FLOAT_H_MISSING))
AC_MEMORY_H
AC_STDC_HEADERS
AC_UNISTD_H
AC_USG
AC_X11_LOCATION

AC_PREFIX(xdvi)

dnl This will generate `Makefile'(s), `config.status', and our header file.
AC_OUTPUT(./Makefile)
