dnl  AUTOCONF configuration for CLISP
dnl  Bruno Haible 18.3.1993
dnl
dnl  configure.in ---<autoconf>--->> configure
dnl
dnl  configure    ---<sh>--->> config.status
dnl                      --->> unixconf.h
dnl          machine.c   --->> machine.h
dnl          makemake.in --->> makemake
dnl
dnl  makemake     ---<sh>--->> makefile
dnl
dnl  makefile     ---<make>--->> lisp.run, compiled.mem
dnl
dnl
AC_INIT(lispbibl.d)
AC_CONFIG_HEADER(unixconf.h)
dnl
dnl           checks for programs
dnl
AC_PROG_CC
                      dnl sets variable CC
AC_PROG_CPP
                      dnl sets variable CPP
AC_GCC_TRADITIONAL
                      dnl modifies variable CC
CL_CC_GCC
                      dnl sets variable CC_GCC
CL_CC_ANSI
                      dnl sets variable CC_ANSI
CL_CC_NEED_CCPAUX
                      dnl sets variable CC_NEED_CCPAUX
CL_CC_NEED_DEELIF
                      dnl sets variable CC_NEED_DEELIF
CL_CC_NEED_DEERROR
                      dnl sets variable CC_NEED_DEERROR
CL_CC_NEED_DEEMA
                      dnl sets variable CC_NEED_DEEMA
CL_CC_NEED_MERGESTRINGS
                      dnl sets variable CC_NEED_MERGESTRINGS
CL_AS_UNDERSCORE
                      dnl sets variable AS_UNDERSCORE
CL_PROG_RANLIB
                      dnl sets variable RANLIB
AC_PROG_INSTALL
                      dnl sets variables INSTALL, INSTALL_DATA, INSTALL_PROGRAM
CL_CP
                      dnl sets variable CP
AC_LN_S
                      dnl sets variable LN_S
dnl
dnl           checks for UNIX variants that set DEFS
dnl
AC_AIX
                      dnl DEFS _ALL_SOURCE
AC_DYNIX_SEQ
                      dnl LIBS -lseq
AC_IRIX_SUN
                      dnl LIBS -lsun
AC_ISC_POSIX
                      dnl DEFS _POSIX_SOURCE, LIBS
AC_MINIX
                      dnl DEFS _POSIX_SOURCE
AC_SCO_INTL
                      dnl LIBS -lintl
CL_HPUX
                      dnl DEFS UNIX_USE_KSH, sets variable GOOD_SH
dnl
dnl           checks for compiler characteristics
dnl
AC_CONST
                      dnl DEFS const
AC_INLINE
                      dnl DEFS inline
CL_VOID
                      dnl DEFS void
CL_LONGLONG
                      dnl DEFS HAVE_LONGLONG
dnl
dnl           checks for header files
dnl
CL_STDC_HEADERS
                      dnl DEFS STDC_HEADERS if exist stdlib.h, stdarg.h, ...
AC_UNISTD_H
                      dnl DEFS HAVE_UNISTD_H if exist unistd.h
AC_USG
                      dnl DEFS USG if not exist strings.h, bzero() etc.
CL_OPENFLAGS
                      dnl DEFS NEED_SYS_FILE_H if sys/file.h is needed for the open() flags
AC_DIR_HEADER
                      dnl directory reading functions, DEFS VOID_CLOSEDIR
AC_XENIX_DIR
                      dnl directory reading functions for Xenix
CL_UTSNAME
                      dnl DEFS HAVE_SYS_UTSNAME_H
CL_NETDB
                      dnl DEFS HAVE_NETDB_H if exist netdb.h
CL_SHM
                      dnl DEFS HAVE_SHM if exist sys/shm.h, sys/ipc.h
CL_TERM
                      dnl DEFS HAVE_TERMIOS_H, HAVE_TERMIO_H, ..., HAVE_SGTTY_H
dnl
dnl           checks for typedefs
dnl
AC_SIZE_T
                      dnl DEFS size_t
AC_PID_T
                      dnl DEFS pid_t
AC_UID_T
                      dnl DEFS uid_t, gid_t
CL_OFF_T
                      dnl DEFS off_t
CL_CADDR_T
                      dnl DEFS caddr_t
CL_CLOCK_T
                      dnl DEFS clock_t
dnl
dnl           checks for structure members
dnl
CL_DIRENT_WITHOUT_NAMLEN
                      dnl DEFS DIRENT_WITHOUT_NAMLEN
AC_STRUCT_TM
                      dnl DEFS TM_IN_SYS_TIME
dnl
dnl           checks for functions and declarations
dnl
CL_MALLOC
                      dnl DEFS RETMALLOCTYPE
CL_FREE
                      dnl DEFS RETFREETYPE
CL_ALLOCA
                      dnl set variable ALLOCA, DEFS NO_ALLOCA
CL_SETJMP
                      dnl DEFS HAVE__JMP, LONGJMP_RETURNS
AC_RETSIGTYPE
                      dnl DEFS RETSIGTYPE
CL_SIGNAL_REINSTALL
                      dnl DEFS SIGNAL_NEED_REINSTALL
CL_SIGNALBLOCK
                      dnl DEFS SIGNALBLOCK_POSIX, SIGNALBLOCK_SYSV, SIGNALBLOCK_BSD
CL_SIGPROCMASK
                      dnl DEFS SIGPROCMASK_CONST
CL_ABORT
                      dnl DEFS RETABORTTYPE
CL_SYS_ERRLIST
                      dnl DEFS SYS_ERRLIST_CONST
CL_GETENV
                      dnl DEFS GETENV_CONST
AC_VFORK
                      dnl DEFS HAVE_VFORK_H, vfork
CL_VFORK
                      dnl DEFS RETVFORKTYPE
CL_EXECV
                      dnl DEFS EXECV_CONST, EXECV1_CONST, EXECV2_CONST
CL_EXECL
                      dnl DEFS EXECL_DOTS, EXECL_CONST
CL_WAITPID
                      dnl DEFS HAVE_WAITPID, PID_T
CL_RUSAGE
                      dnl DEFS HAVE_SYS_RESOURCE_H, HAVE_GETRUSAGE, HAVE_SYS_TIMES_H
CL_GETWD
                      dnl DEFS HAVE_GETWD
CL_GETCWD
                      dnl DEFS GETCWD_SIZE_T
CL_CHDIR
                      dnl DEFS CHDIR_CONST
CL_MKDIR
                      dnl DEFS MKDIR_CONST, MODE_T
CL_RMDIR
                      dnl DEFS RMDIR_CONST
CL_STAT
                      dnl DEFS STAT_CONST
CL_LSTAT
                      dnl DEFS LSTAT_CONST
CL_READLINK
                      dnl DEFS READLINK_CONST, READLINK_BUF_T, READLINK_SIZE_T
CL_OPENDIR
                      dnl DEFS OPENDIR_CONST
CL_OPEN
                      dnl DEFS OPEN_CONST, OPEN_DOTS
CL_READ_WRITE
                      dnl DEFS RETRWTYPE, RW_BUF_T, RW_SIZE_T
CL_WRITE
                      dnl DEFS WRITE_CONST
CL_RENAME
                      dnl DEFS RENAME_CONST
CL_UNLINK
                      dnl DEFS UNLINK_CONST
CL_FSYNC
                      dnl DEFS HAVE_FSYNC
CL_IOCTL
                      dnl DEFS IOCTL_REQUEST_T, IOCTL_DOTS, HAVE_FIONREAD, NEED_SYS_FILIO_H, NEED_SYS_IOCTL_H
CL_SELECT
                      dnl DEFS HAVE_SELECT, SELECT_WIDTH_T, SELECT_SET_T, SELECT_CONST
CL_UALARM
                      dnl DEFS HAVE_UALARM
CL_SETITIMER
                      dnl DEFS HAVE_SETITIMER, SETITIMER_CONST
CL_USLEEP
                      dnl DEFS HAVE_USLEEP
CL_LOCALTIME
                      dnl DEFS LOCALTIME_CONST
CL_GETPWNAM
                      dnl DEFS GETPWNAM_CONST
CL_GETHOSTNAME
                      dnl DEFS HAVE_GETHOSTNAME, GETHOSTNAME_SIZE_T
CL_GETHOSTBYNAME
                      dnl DEFS HAVE_GETHOSTBYNAME, GETHOSTBYNAME_CONST
CL_GETPAGESIZE
                      dnl DEFS HAVE_GETPAGESIZE, RETGETPAGESIZETYPE
CL_VADVISE
                      dnl DEFS HAVE_VADVISE
CL_MMAP
                      dnl DEFS HAVE_MMAP, MMAP_SIZE_T, HAVE_MMAP_ANON, HAVE_MMAP_DEVZERO
CL_SHMAT
                      dnl DEFS RETSHMATTYPE, SHMAT_CONST
CL_SHMCTL
                      dnl DEFS SHMCTL_DOTS
dnl
dnl           checks for compiler characteristics
dnl
AC_CHAR_UNSIGNED
                      dnl DEFS __CHAR_UNSIGNED__ if char is unsigned
CL_MACHINE
                      dnl builds machine.h
dnl
dnl           checks for OS services
dnl
dnl
dnl           other checks for UNIX variants
dnl
AC_OUTPUT(makemake)

