# This file is a shell script that supplies the information necessary
# to tailor a template configure script into the configure script
# appropriate for this directory.  For more information, check any
# existing configure script.

srctrigger=mmalloc.c
srcname="mmalloc library"
configdirs=""

# per-host:

case "${host}" in
  i[34]86-ncr-sysv4*)	host_makefile_frag=config/mh-ncr3000 ;;
  *-*-irix4*)		host_makefile_frag=config/mh-irix4 ;;
  *-*-solaris*)		host_makefile_frag=config/mh-sysv4 ;;
  *-*-sunos4*)		host_makefile_frag=config/mh-sunos4 ;;
  *-*-sysv4*)		host_makefile_frag=config/mh-sysv4 ;;
esac

# per-target:
