# This file is a shell script fragment that supplies the information
# necessary to tailor a template configure script into the configure
# script appropriate for this directory.  For more information, check
# any existing configure script.

configdirs=
srctrigger=readline.c
srcname="the readline library"

# per-host:

files=sysdep-norm.h
links=sysdep.h

case "${host}" in
  *-*-irix*)		host_makefile_frag=config/mh-sysv; files=sysdep-irix.h;;
  i[34]86-ncr-sysv4*)	host_makefile_frag=config/mh-ncr3000 ;;
  *-*-sysv4*)		host_makefile_frag=config/mh-sysv4 ;;
  *-*-solaris*)		host_makefile_frag=config/mh-sysv4 ;;
  i[34]86-*-sco3.2v4*)	host_makefile_frag=config/mh-sco4; files=sysdep-sco.h ;;
  i[34]86-*-sco*)	host_makefile_frag=config/mh-sco; files=sysdep-sco.h ;;
  m68k-apollo-sysv*)	host_makefile_frag=config/mh-apollo68v ;;    
  *-*-sysv*)		host_makefile_frag=config/mh-sysv ;;
  *-*-m88kbcs)		host_makefile_frag=config/mh-sysv ;;
  i[34]86-*-linux)	host_makefile_frag=config/mh-posix ;;
  rs6000-ibm-aix*)	host_makefile_frag=config/mh-sysv; files=sysdep-aix.h ;;
  *-ibm-aix*)		host_makefile_frag=config/mh-sysv ;;
  m68k-sony-news*)					files=sysdep-obsd.h ;;
  *-*-bsd*)						files=sysdep-obsd.h ;;
  *-*-mach*)						files=sysdep-obsd.h ;;
  *-*-sunos3*)						files=sysdep-obsd.h ;;
esac

# per-target:


